@@ -179,6 +179,7 @@ Fixes:
    * After elm_win is created, if there is no manual focus setting, only elm_win should get focus when focus state is changed.
    * Fix the toolbar cannot be unselected when it's mode is ELM_OBJECT_SELECT_MODE_ALWAYS.
    * Remove the back button callback if the back button is unset on the naviframe.
+   * Fixed a bug that naviframe's focus_next didn't work after changing evenry item to elm_layout.
    
 Removals:
 
