@@ -1136,3 +1136,7 @@
 2013-03-08  ChunEon Park (Hermet)
 
         * Remove the back button callback if the button is unset on the naviframe.
+
+2013-03-11  WooHyun Jung
+
+        * Fixed a bug that naviframe's focus_next didn't work after changing evenry item to elm_layout.
